# sort

./: CMakeLists.txt  README.md  sortMain.c
include/: sort.h  sortDefine.h
src/: CMakeLists.txt  insertionSort.c  selectionSort.c  sort.c
unitTest/: CMakeLists.txt  sortArrTest.c  sortTest.h
